--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Obnova avtomobilskih žarometov" />
   <meta property="og:description" content="Pri Zarometixu smo specializirani za obnovo žarometov avtomobilov. Nudimo kakovostno obnovo žarometov za vse vrste avtomobilov." />
   <meta property="og:image" content="static/img/logo.png" />
-  <meta property="og:url" content="URL STRANI" />
+  <meta property="og:url" content="https://www.zarometix.si" />
   <meta property="og:site_name" content="Zarometix" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -27,6 +27,16 @@
 
 
   <title>Obnova avtomobilskih žarometov - Zarometix - Polimerni premaz</title>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WTMKXJQW7R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WTMKXJQW7R');
+</script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
