--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,14 +9,22 @@
   <meta property="og:title" content="Obnova avtomobilskih žarometov" />
   <meta property="og:description" content="Pri Zarometixu smo specializirani za obnovo žarometov avtomobilov. Nudimo kakovostno obnovo žarometov za vse vrste avtomobilov." />
   <meta property="og:image" content="static/img/logo.png" />
-  <meta property="og:url" content="URL STRANI" />
+  <meta property="og:url" content="https://www.zarometix.si" />
   <meta property="og:site_name" content="Zarometix" />
 
     <title>Obnova avtomobilskih žarometov - Zarometix - Kontakt</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="static/css/contact.css" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WTMKXJQW7R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-WTMKXJQW7R');
+</script>
 
 </head>
 <body>
